# ChangeLog for media-sound/amarok
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.194 2007/01/19 00:41:20 flameeyes Exp $

  19 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/amarok-1.4.4+libgpod-0.4.0.patch, amarok-1.4.4-r3.ebuild:
  Add patch to fix building with newer versions of libgpod; closes bug
  #162725; thanks to Alessio Cassiba for reporting, and Olivier Crete for
  pointing out the problem.

  31 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-9999.ebuild:
  As the current SVN version requires a newer libmtp, make the 9999 ebuild
  require it too, even if it's not in portage.

*amarok-9999 (28 Dec 2006)

  28 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> +amarok-9999.ebuild:
  Add a live SVN version of Amarok. Although not supported and a bad idea in
  general, it would save me from supporting people with old and broken
  unofficial amarok-svn ebuilds that usually waste my time.

  26 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/digest-amarok-1.4.4-r3, Manifest:
  Fix digest.

  26 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  amarok-1.4.4-r3.ebuild:
  Stable on sparc wrt #158836

  25 Dec 2006; Andrej Kacian <ticho@gentoo.org> amarok-1.4.4-r3.ebuild:
  Stable on x86, bug #158836.

  23 Dec 2006; Matti Bickel <mabi@gentoo.org> amarok-1.4.4-r3.ebuild:
  ppc stable (bug #158836)

  23 Dec 2006; Markus Rothe <corsair@gentoo.org> amarok-1.4.4-r3.ebuild:
  Stable on ppc64; bug #158836

*amarok-1.4.4-r3 (22 Dec 2006)

  22 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/amarok-1.4.4-asneeded.patch,
  -files/amarok-1.4.4-lastfm+xine-lib-1.1.3.patch,
  -files/amarok-1.4.4-musicbrainz.patch,
  -files/amarok-1.4.4-podcast-fix.patch, -files/amarok-1.4.4-sparc.patch,
  amarok-1.4.3-r1.ebuild, -amarok-1.4.4.ebuild, -amarok-1.4.4-r1.ebuild,
  -amarok-1.4.4-r2.ebuild, +amarok-1.4.4-r3.ebuild: