@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX amarok-1.4.3-playlist-encoding.patch 365 RMD160 5add54202bcc34ad1d695b938c075dd030bf6705 SHA1 9d2eacaf4d8f35cf88e3a2358258ca83c1d35fee SHA256 71ac78fbac11d404017ab1c9a942b0b72ac24638739498ca6f761298a906b11d
 MD5 0e211053265ad86a0f6656c07463b43a files/amarok-1.4.3-playlist-encoding.patch 365
 RMD160 5add54202bcc34ad1d695b938c075dd030bf6705 files/amarok-1.4.3-playlist-encoding.patch 365
@@ -17,14 +20,14 @@ EBUILD amarok-1.4.4-r3.ebuild 2197 RMD160 1ecb81b7dce90ece25802ec896e57b4d32eea3
 MD5 7a4a15bc57f2762987f3773ed3746329 amarok-1.4.4-r3.ebuild 2197
 RMD160 1ecb81b7dce90ece25802ec896e57b4d32eea3e0 amarok-1.4.4-r3.ebuild 2197
 SHA256 966edae29cbecc1bdf9bdc70789907f311b74dae9bc4a289ab097721ea13e03b amarok-1.4.4-r3.ebuild 2197
-EBUILD amarok-9999.ebuild 2263 RMD160 c9d842618f6126c6187338032ede495fc6caf930 SHA1 a85f5a27436d8224c54276fcbd9242fb638838f7 SHA256 5b595c55aa016400798805666f4e174d6a44743b2d4eb3724f94b6ff0d1f52f0
-MD5 4987182a85db2acb265cf63b5bc93a31 amarok-9999.ebuild 2263
-RMD160 c9d842618f6126c6187338032ede495fc6caf930 amarok-9999.ebuild 2263
-SHA256 5b595c55aa016400798805666f4e174d6a44743b2d4eb3724f94b6ff0d1f52f0 amarok-9999.ebuild 2263
-MISC ChangeLog 32130 RMD160 5df99b0814202da918765553c28858dcfec7e7e0 SHA1 634d5704b5a1c62eb8d1cb123b78fd34e8f38a43 SHA256 a3b9893ae3b578090dc267c8000ec01a7bd3602c26144413df32062bf8a49e89
-MD5 eefc3e1e5516d74e31d9d1ecfd3a8c4a ChangeLog 32130
-RMD160 5df99b0814202da918765553c28858dcfec7e7e0 ChangeLog 32130
-SHA256 a3b9893ae3b578090dc267c8000ec01a7bd3602c26144413df32062bf8a49e89 ChangeLog 32130
+EBUILD amarok-9999.ebuild 2261 RMD160 67f9e76ef0cdd0deeae77b4d4cd0c0362bfda290 SHA1 629b97515e08b81b527b92239d0b3db9b18cdce2 SHA256 70668fe401bbf0982cd2552519d68652685509c80a4b3ee031f793b53c90d4b6
+MD5 9c4e32128d48cdcb139916b946696c28 amarok-9999.ebuild 2261
+RMD160 67f9e76ef0cdd0deeae77b4d4cd0c0362bfda290 amarok-9999.ebuild 2261
+SHA256 70668fe401bbf0982cd2552519d68652685509c80a4b3ee031f793b53c90d4b6 amarok-9999.ebuild 2261
+MISC ChangeLog 32246 RMD160 e720281cfecdf126b6b85db909629a5f5daebd6c SHA1 6fcd2971fd9af9bc5ff150c34a448e16ddbd8048 SHA256 7bc8455b4bed2f189434790bf9771c1a1828ee39d27b81a41e0df5c8a391ea10
+MD5 018be5cd8c2296564669eb5376248fc5 ChangeLog 32246
+RMD160 e720281cfecdf126b6b85db909629a5f5daebd6c ChangeLog 32246
+SHA256 7bc8455b4bed2f189434790bf9771c1a1828ee39d27b81a41e0df5c8a391ea10 ChangeLog 32246
 MISC metadata.xml 266 RMD160 3ce35cecb3927850e61ee5bad2e0e4b210c0df3e SHA1 d41658ffae344562e8579d219bd3f746d4cba624 SHA256 c2f316075bb660460a285a5474235615f5946bb47df6e6f0c9c4de9ed64edf26
 MD5 986cc6d7e9a21474e34336045796ffaa metadata.xml 266
 RMD160 3ce35cecb3927850e61ee5bad2e0e4b210c0df3e metadata.xml 266
@@ -35,6 +38,13 @@ SHA256 30a763884b75f16b9a733b1eeb468f2316f2b6ae1e7500459463fee5cbd94493 files/di
 MD5 09d4216c683d6a633f4c8fb6dfe73719 files/digest-amarok-1.4.4-r3 503
 RMD160 f2b5a9cb52037ec05f9aafc0ce89015d9ca015a2 files/digest-amarok-1.4.4-r3 503
 SHA256 5684c57a46c61c81e4eb0204bdfd7b6baf02dd2e5f3613a76b1876d812fd5b23 files/digest-amarok-1.4.4-r3 503
-MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-amarok-9999 1
-RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-amarok-9999 1
-SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-amarok-9999 1
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-amarok-9999 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-amarok-9999 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-amarok-9999 0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.1 (GNU/Linux)
+
+iD8DBQFFuP7IAiZjviIA2XgRAtCcAJ9D4ZCIlizBS3NAqJTimcXdi1PGrACgtxsE
+Xd20inu7GG0w1H/oCrjzVuk=
+=hOR+
+-----END PGP SIGNATURE-----
