@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/amarok
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.194 2007/01/19 00:41:20 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.195 2007/01/25 19:02:24 flameeyes Exp $
+
+  25 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> amarok-9999.ebuild:
+  Replace -* keyword with empty keywords.
 
   19 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
   +files/amarok-1.4.4+libgpod-0.4.0.patch, amarok-1.4.4-r3.ebuild:
